# LED_Pi

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/superpowers/plans/: 2026-07-23-led-pi-appliance-implementation-plan.md
docs/superpowers/specs/: 2026-07-23-led-pi-appliance-design.md
ledpi/: __init__.py
ledpi/config/: __init__.py  settings.py
ledpi/media/: __init__.py  models.py  pipeline.py
ledpi/playback/: __init__.py  models.py  player.py  playlist.py
ledpi/render/: __init__.py  base.py  fake.py  frame.py  patterns.py
ledpi/service/: __init__.py  __main__.py  cli.py
media/inbox/: .gitkeep
media/processed/: .gitkeep
tests/: __init__.py  test_config.py  test_media.py  test_playback.py  test_render.py  test_service_cli.py
