[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ledpi"
version = "0.1.0"
description = "Raspberry Pi 5 LED matrix appliance for local media playback."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
ledpi = "ledpi.service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
